--- a/base64Deco/Base.lproj/Main.storyboard
+++ b/base64Deco/Base.lproj/Main.storyboard
@@ -708,8 +708,8 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N9G-L4-QE6">
-                                <rect key="frame" x="430" y="439" width="90" height="32"/>
-                                <buttonCell key="cell" type="push" title="Pruebas" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GpR-uC-BYg">
+                                <rect key="frame" x="386" y="439" width="178" height="32"/>
+                                <buttonCell key="cell" type="push" title="Copiar al Portapapeles" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GpR-uC-BYg">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
